# scrounch_backend

./: .env.dev.example  .env.prod.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  dev-docker-compose.yml  flake.nix  rust-toolchain.toml
.github/workflows/: docker.yml  release.yml  rust.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/location/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
api/src/product/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
api/src/recipe/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
api/src/refill/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
api/src/user/: edit.rs  get.rs  me.rs  mod.rs
api/src/utils/: download.rs  logout.rs  mod.rs  openapi.rs  sma.rs  status.rs  upload.rs
api/src/warehouse/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
entity/: Cargo.toml
entity/src/: error.rs  lib.rs  location.rs  prelude.rs  product.rs  s3.rs  user.rs
entity/src/models/: location.rs  mod.rs  prelude.rs  product.rs  recipe.rs  recipe_ingredients.rs  refill.rs  sea_orm_active_enums.rs  user.rs  warehouse.rs  warehouse_product.rs  warehouse_products.rs  warehouse_recipe.rs  warehouse_recipes.rs
entity/src/request/: enum.rs  location.rs  mod.rs  product.rs  recipe.rs  refill.rs  user.rs  warehouse.rs
entity/src/response/: enum.rs  location.rs  mod.rs  product.rs  recipe.rs  refill.rs  sma.rs  user.rs  warehouse.rs
extractor/: Cargo.toml
extractor/src/: lib.rs  utils.rs
extractor/src/profile/: admin.rs  mod.rs  oidc_user.rs  user.rs
extractor/src/query/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_configuration_table.rs  m20220101_000001_create_table.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_product_table.rs  m20220101_000002_create_user_table.rs  m20220101_000003_add_is_banned.rs  m20220101_000003_create_product_table.rs  m20220101_000004_create_location_table.rs  m20220101_000004_remove_quantity_from_product.rs  m20220101_000005_create_location_table.rs  m20220101_000005_create_refill_table.rs  m20220101_000006_create_recipe_table.rs  m20220101_000006_create_refill_table.rs  m20220101_000007_create_warehouse_table.rs  m20220101_999999_create_payments_table.rs
proc/: Cargo.toml
proc/src/: filter.rs  lib.rs  sort.rs
service/: Cargo.toml
service/src/: lib.rs  macro.rs  s3.rs  utils.rs
service/src/mutation/: location.rs  mod.rs  product.rs  recipe.rs  refill.rs  user.rs  warehouse.rs
service/src/query/: location.rs  mod.rs  product.rs  recipe.rs  refill.rs  user.rs  warehouse.rs
src/: cli.rs  error.rs  lib.rs  main.rs  oidc.rs  state.rs
src/extractors/: admin.rs  mod.rs  oidc_user.rs  user.rs
src/handlers/: app_error.rs  mod.rs
src/models/: admin.rs  file.rs  mod.rs  oidc_user.rs  user.rs
src/models/enum/: location.rs
src/models/profile/: admin.rs  mod.rs  oidc_user.rs  user.rs
src/models/request/: location.rs  mod.rs  product.rs  user.rs
src/models/response/: location.rs  mod.rs  product.rs  sma.rs  user.rs
src/models/utils/: mod.rs  pagination.rs  sma.rs
src/routes/: mod.rs  openapi.rs  status.rs
src/routes/location/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
src/routes/product/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
src/routes/refill/: delete.rs  edit.rs  get.rs  mod.rs  new.rs
src/routes/user/: edit.rs  get.rs  me.rs  mod.rs
src/routes/utils/: download.rs  login.rs  logout.rs  mod.rs  openapi.rs  sma.rs  status.rs  upload.rs
tests/: basics_tests.rs  location_tests.rs  misc_tests.rs  openapi_tests.rs  product_tests.rs  recipe_tests.rs  refill_tests.rs  status_tests.rs  user_tests.rs  warehouse_tests.rs
tests/utils/: extract.rs  generation.rs  mod.rs
tests/utils/containers/: keycloak.rs
