[package]
name = "scrounch_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity", "service"]

# Enable high optimizations for dependencies:
[profile.dev.package."*"]
opt-level = 3

# Git hooks
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]

[dev-dependencies]
http-body-util = { version = "0.1.0" }
tower = { version = "0.5.1", features = ["util"] }
testcontainers = "0.22.0"
regex = "1.10.6"
axum-test = "15.7.1"
reqwest = { version = "0.12.7", features = ["cookies"] }

[dependencies]
## Rest API
axum = "0.7.5"
tower = "0.5.1"

# Runtime
tokio = { version = "1.40.0", features = ["full"] }

# Database
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
migration = { path = "migration" }
entity = { path = "entity" }
service = { path = "service" }

# CLI + Env + Config
clap = { version = "4.5.17", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }

# Trace + Log
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# OpenAPI
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# Auth + OIDC
axum-oidc = "0.4.0"
tower-sessions = "0.12.0"

# Serialisation + Deserialisation 
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.114" }
