[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
# Serialisation + Deserialisation 
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_with = { version ="3.11.0", features = ["macros"] }

# OpenAPI
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono", "time", "decimal", "non_strict_integers"] }

# Utils
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4.38"
rust_decimal = "1.36.0"

[dependencies.sea-orm]
version = "1.0.1"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-json",
    "with-chrono",
    "with-uuid"
]
