[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[features]
native-tls = [
    "sea-orm/runtime-tokio-native-tls", 
]
rustls-tls = [
    "sea-orm/runtime-tokio-rustls", 
    "aws-sdk-s3/rustls",
    "aws-config/rustls",
]


[dependencies]
proc = { path = "../proc" }

## Rest API
axum = { workspace = true, features = ["multipart"] }

# S3 / Minio
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# Serialisation + Deserialisation 
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }

# Log
log = { workspace = true }

# OpenAPI
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono", "time", "decimal", "non_strict_integers"] }

# Utils
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }
strum_macros = { workspace = true }

[dependencies.sea-orm]
workspace = true
features = [
    "runtime-tokio",
    "sqlx-postgres",
    "with-json",
    "with-chrono",
    "with-uuid"
]
