[package]
name = "extractor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "extractor"
path = "src/lib.rs"

[dependencies]
## Rest API
axum = { version = "0.7.6", features = ["multipart"] }
tower = "0.5.1"

# Internal
service = { path = "../service" }
entity = { path = "../entity" }

# Log
log = "0.4.22"

# OpenAPI
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono", "time", "decimal", "non_strict_integers"] }

# Auth + OIDC
axum-oidc = "0.5.0"

# Serialisation + Deserialisation 
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_with = { version ="3.11.0", features = ["macros"] }

# Utils
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4.38"
