[package]
name = "extractor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "extractor"
path = "src/lib.rs"

[dependencies]
# Internal
service = { path = "../service" }
entity = { path = "../entity" }

## Rest API
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }

# Log
log = { workspace = true }

# OpenAPI
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono", "time", "decimal", "non_strict_integers"] }

# Auth + OIDC
axum-oidc = { workspace = true }

# Serialisation + Deserialisation 
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }

# Utils
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
chrono = { workspace = true }
