[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }

[dependencies.sea-orm]
workspace = true
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-chrono",
]

[dependencies.sea-orm-migration]
workspace = true
features = ["runtime-tokio-rustls", "sqlx-postgres"]
