[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
# Internal
entity = { path = "../entity" }

# Cache
fred = { version = "9.2.1", optional = true, features = ["serde-json"] }

# Serialisation + Deserialisation 
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.114" }

# Runtime
tokio = { version = "1.40.0", features = ["full"], optional = true }
futures = "0.3.31"

# Log
log = "0.4.22"

# OpenAPI
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono", "time", "decimal", "non_strict_integers"] }

# Utils
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

[dependencies.sea-orm]
version = "1.0.1"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-json",
    "with-chrono",
    "with-uuid"
]

[features]
cache = ["dep:fred", "dep:tokio"]
