[package]
name = "service"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[features]
native-tls = [
    "fred?/enable-native-tls", 
]
rustls-tls = [
    "fred?/enable-rustls", 
]

cache = ["dep:fred", "dep:tokio"]

[dependencies]
# Internal
entity = { path = "../entity" }

# Cache
fred = { workspace = true, optional = true, features = ["serde-json"] }

# Serialisation + Deserialisation 
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Runtime
tokio = { workspace = true, features = ["full"], optional = true }
futures = { workspace = true }

# Log
log = { workspace = true }

# OpenAPI
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono", "time", "decimal", "non_strict_integers"] }

# Utils
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }

[dependencies.sea-orm]
workspace = true
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-json",
    "with-chrono",
    "with-uuid"
]

